# kac_prediction

./: .gitignore  .gitmodules  CMakeLists.txt  Pipfile  environment.yml  index.py  pyproject.toml  readme.md  setup.py
.github/workflows/: test.yml  tests.yml
config/: size_of_circular_drum.yaml  tune_size_of_circular_drum.yaml  wandb-tune.yaml
config/wandb/: tune_size_of_circular_drum.yaml
kac_prediction/: __init__.py  utils.py
kac_prediction/architecture/: CRePE.py  __init__.py  size_of_circular_drum.py
kac_prediction/dataset/: __init__.py  dataset.py  generate_dataset.py  input_representation.py  load_dataset.py  regenerate_data_points.py  transform_dataset.py  utils.py
kac_prediction/pipeline/: __init__.py  data_loader.py  io.py  load_model.py  model.py  routine.py  train.py  types.py
kac_prediction/routine/: size_of_circular_drum.py
kac_prediction/samplers/: __init__.py  remote.py  test_sweep.py  test_tone.py
routines/: size_of_circular_drum.py
scripts/: deploy.py  train.py
scripts/config/local/: dim_of_rectangular_drum.yaml  size_of_circular_drum.yaml
scripts/config/wandb/: tune_dim_of_rectangular_drum.yaml  tune_size_of_circular_drum.yaml
scripts/routines/: __init__.py  dim_of_rectangular_drum.py  size_of_circular_drum.py
test/: test.cfg  test.py  test.sh
test/assets/: custom_config.yaml
test/src/: __init__.py  test_dataset.py  test_pipeline.py  test_samplers.py
