[project]
name = "kac_prediction"
version = "1.2.0"
authors = [{ name = "Lewis Wolstanholme", email = "lewiswolstanholme@gmail.com" }]
description = "Neural networks designed for working with arbitrarily shaped drums."
keywords = ["kac_prediction"]
license = { text = "CC-BY" }

classifiers = [
	"Operating System :: MacOS :: MacOS X",
	"Operating System :: Microsoft :: Windows",
	"Operating System :: Unix",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
	"Typing :: Typed",
]

requires-python = ">=3.11"
dependencies = [
	"numpy>=2.4",
	"soundfile>=0.13",
	"torch>=2.10",
	"torchaudio>=2.10",
	"tqdm>4.67",
	"wandb>=0.24"
]

[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"kac_prediction" = ["py.typed"]

[tool.flake8]
exclude = [
	".git",
	"_skbuild",
	"build",
	"data",
	"kac_drumset",
	"model",
	"unused"
]
ignore = ["E261", "W191", "W504"]
	# E261 - two spaces before inline comment
	# W191 - indentation contains tabs (python prefers spaces, I prefer tabs)
	# W504 - line break before binary operator (if x or y and ... should line break before the operator if necessary)
per-file-ignores = ["*.pyi:E302,E402,E704"]
	# E302 - expected 2 blank lines, found 0 (for .pyi files)
	# E402 - module level import not at top of file
	# E704 - multiple statements on one line (def) - for .pyi files
max-line-length = 120
docstring-quotes = "'''"
multiline-quotes = "'''"

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
files = [
	"kac_prediction/**/*.py",
	"scripts/**/*.py",
	"test/**/*.py"
]
# strict = true

[[tool.mypy.overrides]]
module = [
	"kac_drumset.geometry",
	"kac_drumset.physics",
	"kac_drumset.samplers",
	"soundfile",
	"torchaudio"
]
ignore_missing_imports = true